--- a/plotters/ChargeSpreading.ipynb
+++ b/plotters/ChargeSpreading.ipynb
@@ -3,11 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import ROOT\n",
-    "from T2KStyle import T2KStyle\n",
+    "from T2KStyle.T2KStyle import GetT2K\n",
+    "style = GetT2K(3)\n",
+    "ROOT.gROOT.SetStyle(\"T2K\")\n",
     "c = ROOT.TCanvas('c', '', 800, 600)\n",
     "cl = ROOT.TCanvas('cl', '', 1600, 1200)\n",
     "cl3 = ROOT.TCanvas('cl3', '', 1600, 1800)\n",
@@ -18,7 +22,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "path_loc = '~/DATA/'\n",
@@ -37,14 +46,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "file = ROOT.TFile(file_name)\n",
+    "# file = ROOT.TFile(file_name)\n",
     "#        ROOT.TFile(file_name2)]\n",
     "# title = ['MM1', 'DESY']\n",
     "it = 9\n",
-    "# file = ROOT.TFile(file_name2 + f's_412_430_02T_iter{it}.root')"
+    "file = ROOT.TFile(path_hs + f's_412_430_02T_iter{it}.root')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = '~/LXPLUS/DESY_testbeam2021/coarse/'\n",
+    "path = '/eos/user/s/ssuvorov/DESY_testbeam2021/coarse/'\n",
+    "volt = '275'\n",
+    "time = '412'\n",
+    "file = ROOT.TFile(path + f'/z_{time}ns_{volt}V_860_iter9.root')\n",
+    "#         ROOT.TFile(path + f'/z_{time}ns_{volt}V_660_iter9.root'),\n",
+    "#         ROOT.TFile(path + f'/z_{time}ns_{volt}V_460_iter9.root'),\n",
+    "#         ROOT.TFile(path + f'/z_{time}ns_{volt}V_260_iter9.root'),\n",
+    "#         ROOT.TFile(path + f'/z_{time}ns_{volt}V_60_iter9.root')\n",
+    "#        ]\n",
+    "name = ['860 mm', '660 mm', '460 mm', '260 mm', '60 mm']\n",
+    "color = [ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet, ROOT.kYellow, ROOT.kCyan, ROOT.kOrange, ROOT.kSpring, ROOT.kAzure]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y scan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = '/eos/experiment/neutplatform/np07/HAT/DESY_2021/ana_output/y_scan2/'\n",
+    "volt = '275'\n",
+    "time = '412'\n",
+    "file_name = [path + f'/y_0', # 0\n",
+    "             path + f'/y_40',\n",
+    "             path + f'/y_20',\n",
+    "             path + f'/y_60',\n",
+    "             path + f'/y_80',\n",
+    "             path + f'/y_100',\n",
+    "             path + f'/y_m20',\n",
+    "             path + f'/y_m40',\n",
+    "             path + f'/y_m60',\n",
+    "             path + f'/y_m80',\n",
+    "             path + f'/y_m100',\n",
+    "             path + f'/y_m120',\n",
+    "             path + f'/y_m140',\n",
+    "             path + f'/y_m150',\n",
+    "             path + f'/y_m170' # 14\n",
+    "            ]\n",
+    "\n",
+    "title = ['0 mm', '40 mm', '20 mm', '60 mm', '80 mm', '100 mm', '-20 mm', '-40 mm', '-60 mm', '-80 mm', '-100 mm', '-120 mm', '-140 mm', '-150 mm', '-170 mm']\n",
+    "value = [0, 40, 20, 60, 80, 100, -20, -40, -60, -80, -100, -120, -140, -150, -170]\n",
+    "\n",
+    "# initialise files\n",
+    "niter = '9'\n",
+    "file  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name]\n",
+    "\n",
+    "color = [ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet, ROOT.kYellow, ROOT.kCyan, ROOT.kOrange, ROOT.kSpring, ROOT.kAzure, ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet]\n",
+    "\n",
+    "if (len(file_name) != len(value) or len(color) < len(value) or len(title) != len(value)):\n",
+    "    print('Check length!!!')"
    ]
   },
   {
@@ -57,13 +144,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%jsroot on\n",
     "c.cd()\n",
     "h = ROOT.TH2F('h', '', 40, 0, 40, 40, 0., 40.)\n",
-    "file.outtree.Project('h', 'pad_y[][0]:pad_x[][0]')\n",
+    "h2 = ROOT.TH2F('h', '', 40, 0, 40, 40, 0., 40.)\n",
+    "ROOT.gStyle.SetPalette(ROOT.kBird)\n",
+    "# file.outtree.Project('h', 'pad_y[][0]:pad_x[][0]')\n",
+    "for f in file:\n",
+    "    print(f.GetName())\n",
+    "    for entry in f.outtree:\n",
+    "        for i in range(36):\n",
+    "            if (entry.pad_charge[i*10] > 0):\n",
+    "                h.Fill(entry.pad_x[i*10], entry.pad_y[i*10], entry.pad_charge[i*10])\n",
+    "                h2.Fill(entry.pad_x[i*10], entry.pad_y[i*10])\n",
+    "h.Divide(h2)\n",
     "h.GetXaxis().SetTitle('Column')\n",
     "h.GetYaxis().SetTitle('Row')\n",
     "h.Draw('colz')\n",
@@ -73,31 +172,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%jsroot on\n",
-    "cl.Clear()\n",
-    "cl.Divide(2, 2)\n",
+    "c.cd()\n",
+    "ROOT.gStyle.SetPalette(ROOT.kBird)\n",
+    "h.Draw('colz')\n",
+    "c.Draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%jsroot off\n",
+    "cw.Clear()\n",
+    "cw.Divide(2)\n",
     "\n",
     "pad = 1\n",
     "\n",
-    "cl.cd(1)\n",
+    "cw.cd(1)\n",
     "h = ROOT.TH2F('h', '', 36, 0, 36, 100, 0., 4000)\n",
     "file.outtree.Project('h', f'pad_charge[][0]:pad_x[][0]')\n",
     "h.Draw('colz')\n",
-    "h.GetXaxis().SetTitle('Row')\n",
+    "h.GetXaxis().SetTitle('x_{pad}')\n",
     "h.GetYaxis().SetTitle('Q_{leading}')\n",
     "\n",
-    "cl.cd(2)\n",
+    "cw.cd(2)\n",
     "h2 = ROOT.TH2F('h2', '', 36, 0, 36, 40, 0., 0.3)\n",
     "file.outtree.Project('h2', f'pad_charge[][{1}] / pad_charge[][0]:pad_x[][0]')\n",
     "h2.Draw('colz')\n",
-    "h2.GetXaxis().SetTitle('Row')\n",
+    "h2.GetXaxis().SetTitle('x_{pad}')\n",
     "h2.GetYaxis().SetTitle('Q_{second}/Q_{leading}')\n",
     "\n",
-    "cl.Draw()\n",
-    "cl.Print('charge_vs_column.pdf')"
+    "cw.Draw()\n",
+    "cw.Print('charge_vs_column.pdf')"
    ]
   },
   {
@@ -208,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
