--- a/plotters/angle.ipynb
+++ b/plotters/angle.ipynb
@@ -13,6 +13,8 @@
     "style = GetT2K(3)\n",
     "ROOT.gROOT.SetStyle(\"T2K\")\n",
     "c = ROOT.TCanvas('c', '', 800, 600)\n",
+    "cc = ROOT.TCanvas('cc', '', 800, 600)\n",
+    "ccc = ROOT.TCanvas('ccc', '', 800, 600)\n",
     "cl = ROOT.TCanvas('cl', '', 1600, 1200)\n",
     "cw = ROOT.TCanvas('c2', '', 1600, 600)"
    ]
@@ -31,9 +33,135 @@
     "path_c = '~/LXPLUS/DESY_testbeam/tree_v9/'\n",
     "path_c2 = '~/LXPLUS/DESY_testbeam/tree_v12/'\n",
     "\n",
-    "# file_name = path + '/g_360_200_100p'\n",
+    "path = '/eos/user/s/ssuvorov/DESY_testbeam/tree_v7'\n",
+    "\n",
+    "file2 = [ROOT.TFile(path + '/phi_412_45_d_iter9.root')]\n",
     "N_iter = 9\n",
     "color = [ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet, ROOT.kYellow, ROOT.kCyan, ROOT.kOrange, ROOT.kMagenta, ROOT.kAzure]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DESY 2021"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = '/eos/experiment/neutplatform/np07/HAT/DESY_2021/ana_output/phi3/'\n",
+    "file_name = [path + 'phi_y_m60_z_m40_200ns_5',\n",
+    "             path + 'phi_y_m60_z_m40_200ns_10',\n",
+    "             path + f'phi_y_m60_z_m40_200ns_20',\n",
+    "             path + 'phi_y_m60_z_m40_200ns_30',\n",
+    "             path + 'phi_y_m60_z_m40_200ns_40',\n",
+    "             path + 'phi_y_m60_z_m40_200ns_45',\n",
+    "             path + 'phi_y_m90_z_m40_200ns_50',\n",
+    "             path + 'phi_y_0_z_m40_200ns_60',\n",
+    "             path + 'phi_y_m30_z_m40_200ns_70',\n",
+    "             path + 'phi_y_m40_z_m40_200ns_80',\n",
+    "             path + 'phi_y_m50_z_m40_200ns_90',\n",
+    "            ]\n",
+    "\n",
+    "file_name1 = [path + f'phi_y_m60_z_m40_200ns_20_c',\n",
+    "              path + 'phi_y_m60_z_m40_200ns_30_c',\n",
+    "              path + 'phi_y_0_z_m40_200ns_60_c',\n",
+    "              path + 'phi_y_m30_z_m40_200ns_70_c',\n",
+    "              path + 'phi_y_m40_z_m40_200ns_80_c',\n",
+    "             ]\n",
+    "\n",
+    "file_name2 = [path + 'phi_y_m60_z_m40_200ns_20_d',\n",
+    "              path + 'phi_y_m60_z_m40_200ns_30_d',\n",
+    "              path + 'phi_y_m60_z_m40_200ns_40_d',\n",
+    "              path + 'phi_y_m60_z_m40_200ns_45_d',\n",
+    "              path + 'phi_y_m90_z_m40_200ns_50_d',\n",
+    "              path + 'phi_y_0_z_m40_200ns_60_d',\n",
+    "              path + 'phi_y_m30_z_m40_200ns_70_d',\n",
+    "             ]\n",
+    "\n",
+    "title = ['5', '10', '20', '30', '40', '45', '50', '60', '70', '80', '90']\n",
+    "value = [5, 10, 20, 30, 40, 45, 50, 60, 70, 80, 90]\n",
+    "value1 = [20, 30, 60, 70, 80]\n",
+    "value2 = [20, 30, 40, 45, 50, 60, 70]\n",
+    "\n",
+    "# initialise files\n",
+    "niter = '6'\n",
+    "file  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name]\n",
+    "file1  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name1]\n",
+    "file2  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name2]\n",
+    "\n",
+    "color = [ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet, ROOT.kYellow, ROOT.kCyan, ROOT.kOrange, ROOT.kSpring, ROOT.kAzure, ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet]\n",
+    "\n",
+    "if (len(file_name) != len(value) or len(color) < len(value) or len(title) != len(value)):\n",
+    "    print('Check length!!!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DESY 2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = '/eos/experiment/neutplatform/np07/HAT/DESY_2019/phi/'\n",
+    "time = '412'\n",
+    "file_name = [path + f'phi_{time}_0',\n",
+    "             path + f'phi_{time}_10',\n",
+    "             path + f'phi_{time}_20',\n",
+    "             path + f'phi_{time}_30',\n",
+    "             path + f'phi_{time}_40',\n",
+    "             path + f'phi_{time}_45',\n",
+    "             path + f'phi_{time}_50',\n",
+    "             path + f'phi_{time}_60',\n",
+    "             path + f'phi_{time}_70',\n",
+    "             path + f'phi_{time}_80',\n",
+    "             path + f'phi_{time}_90',\n",
+    "            ]\n",
+    "\n",
+    "file_name1 = [path + f'phi_{time}_20_c',\n",
+    "              path + f'phi_{time}_30_c',\n",
+    "              path + f'phi_{time}_60_c',\n",
+    "              path + f'phi_{time}_70_c',\n",
+    "             ]\n",
+    "\n",
+    "file_name2 = [path + f'phi_{time}_20_d',\n",
+    "              path + f'phi_{time}_30_d',\n",
+    "              path + f'phi_{time}_40_d',\n",
+    "              path + f'phi_{time}_45_d',\n",
+    "              path + f'phi_{time}_50_d',\n",
+    "              path + f'phi_{time}_60_d',\n",
+    "              path + f'phi_{time}_70_d',\n",
+    "             ]\n",
+    "\n",
+    "title = ['0', '10', '20', '30', '40', '45', '50', '60', '70', '80', '90']\n",
+    "value = [0, 10, 20, 30, 40, 45, 50, 60, 70, 80, 90]\n",
+    "value1 = [20, 30, 60, 70]\n",
+    "value2 = [20, 30, 40, 45, 50, 60, 70]\n",
+    "\n",
+    "# initialise files\n",
+    "niter = '2'\n",
+    "file  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name]\n",
+    "file1  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name1]\n",
+    "file2  = [ROOT.TFile(fn + f'_iter{niter}.root') for fn in file_name2]\n",
+    "\n",
+    "color = [ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet, ROOT.kYellow, ROOT.kCyan, ROOT.kOrange, ROOT.kSpring, ROOT.kAzure, ROOT.kRed, ROOT.kGreen, ROOT.kBlack, ROOT.kBlue, ROOT.kViolet]\n",
+    "\n",
+    "if (len(file_name) != len(value) or len(color) < len(value) or len(title) != len(value)):\n",
+    "    print('Check length!!!')"
    ]
   },
   {
@@ -44,9 +172,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DESY 2021"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%jsroot on\n",
+    "\n",
+    "fit_low = -0.003\n",
+    "fit_high = 0.003\n",
+    "\n",
+    "mg = ROOT.TMultiGraph()\n",
+    "gr = ROOT.TGraphErrors()\n",
+    "gr.SetTitle('Row/column')\n",
+    "gr.SetMarkerStyle(21)\n",
+    "gr.SetMarkerColor(ROOT.kBlack)\n",
+    "gr1 = ROOT.TGraphErrors()\n",
+    "gr1.SetMarkerStyle(22)\n",
+    "gr1.SetMarkerColor(ROOT.kBlue)\n",
+    "gr2 = ROOT.TGraphErrors()\n",
+    "gr1.SetTitle('2by1 & 3by1')\n",
+    "gr2.SetTitle('Diagonal')\n",
+    "gr2.SetMarkerStyle(23)\n",
+    "gr2.SetMarkerColor(ROOT.kRed)\n",
+    "\n",
+    "for num, angle in enumerate(value):\n",
+    "    resol = file[num].Get('resol_total')\n",
+    "    resol.Fit('gaus', 'Q', '', fit_low, fit_high)\n",
+    "    res = resol.GetFunction('gaus').GetParameter(2)\n",
+    "    res_e = resol.GetFunction('gaus').GetParError(2)\n",
+    "    gr.SetPoint(gr.GetN(), angle, res*1e6)\n",
+    "    gr.SetPointError(gr.GetN()-1, 0., res_e*1e6)\n",
+    "mg.Add(gr)\n",
+    "\n",
+    "for num, angle in enumerate(value1):\n",
+    "    resol = file1[num].Get('resol_total')\n",
+    "    resol.Fit('gaus', 'Q', '', fit_low, fit_high)\n",
+    "    res = resol.GetFunction('gaus').GetParameter(2)\n",
+    "    res_e = resol.GetFunction('gaus').GetParError(2)\n",
+    "    gr1.SetPoint(gr1.GetN(), angle, res*1e6)\n",
+    "    gr1.SetPointError(gr1.GetN()-1, 0., res_e*1e6)\n",
+    "mg.Add(gr1)\n",
+    "\n",
+    "for num, angle in enumerate(value2):\n",
+    "    resol = file2[num].Get('resol_total')\n",
+    "    resol.Fit('gaus', 'Q', '', fit_low, fit_high)\n",
+    "    res = resol.GetFunction('gaus').GetParameter(2)\n",
+    "    res_e = resol.GetFunction('gaus').GetParError(2)\n",
+    "    gr2.SetPoint(gr2.GetN(), angle, res*1e6)\n",
+    "    gr2.SetPointError(gr2.GetN()-1, 0., res_e*1e6)\n",
+    "mg.Add(gr2)\n",
+    "    \n",
+    "c.cd()\n",
+    "mg.Draw('ap')\n",
+    "mg.SetMinimum(0)\n",
+    "c.BuildLegend()\n",
+    "c.Draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "file_out = ROOT.TFile(\"test.root\", \"RECREATE\")\n",
+    "gr.SetName(\"col\")\n",
+    "gr2.SetName(\"diag\")\n",
+    "gr1.SetName(\"compl\")\n",
+    "gr.Write()\n",
+    "gr1.Write()\n",
+    "gr2.Write()\n",
+    "\n",
+    "file_out.Close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -172,20 +390,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%jsroot on\n",
     "c.Clear()\n",
     "res_evo = []\n",
     "mg = ROOT.TMultiGraph()\n",
-    "N_iter = 7\n",
-    "peaking = 200\n",
-    "angles = [30, 40, 50, 60, 70]\n",
-    "for f, angle in enumerate(angles):\n",
+    "N_iter = 9\n",
+    "# peaking = 200\n",
+    "# angles = [30, 40, 50, 60, 70]\n",
+    "for f, angle in enumerate(value):\n",
     "    res_evo.append(ROOT.TGraphErrors())\n",
     "    for it in range(N_iter):\n",
-    "        file = ROOT.TFile(path_d + f'phi_{str(peaking)}_{str(angle)}_d_iter{it}.root')\n",
+    "        file = ROOT.TFile(file_name[f] + f'_iter{it}.root')\n",
     "        res = file.Get('resol_total')\n",
     "        res.Fit('gaus', 'Q')\n",
     "        fit_res = res.GetFunction(\"gaus\");\n",
@@ -193,7 +413,7 @@
     "        sigma_e = fit_res.GetParError(2);\n",
     "        res_evo[-1].SetPoint(it, it, sigma*1e6)\n",
     "        res_evo[-1].SetPointError(it-1, sigma_e) \n",
-    "    res_evo[-1].SetTitle(f'{angle}' + '^{#circ}')\n",
+    "    res_evo[-1].SetTitle(f'{title[f]}' + '^{#circ}')\n",
     "    res_evo[-1].SetMarkerColor(color[f])\n",
     "    mg.Add(res_evo[-1])\n",
     "    \n",
@@ -202,7 +422,7 @@
     "mg.GetXaxis().SetTitle('Iteration')\n",
     "mg.GetYaxis().SetTitle('Resolution [#mum]')\n",
     "mg.SetMinimum(0.)\n",
-    "mg.SetMaximum(1700.)\n",
+    "mg.SetMaximum(5000.)\n",
     "mg.Draw('apl')\n",
     "c.BuildLegend()\n",
     "c.SetGrid()\n",
@@ -498,9 +718,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "c.cd()\n",
+    "file_id = 0\n",
+    "gr = ROOT.TGraph()\n",
+    "for col in range(1, 50):\n",
+    "    h = ROOT.TH1F('h', '', 200, -0.003, 0.003)\n",
+    "    file2[file_id].outtree.Project('h', f'residual[{col}]', '')\n",
+    "    h.Fit('gaus', 'Q')\n",
+    "    if not h.GetFunction('gaus'): continue\n",
+    "    gr.SetPoint(gr.GetN(), col, h.GetFunction('gaus').GetParameter(2))\n",
+    "    \n",
+    "gr.Draw()\n",
+    "c.Draw()"
+   ]
   },
   {
    "cell_type": "code",
@@ -512,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -526,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
