--- a/plotters/x_scan.ipynb
+++ b/plotters/x_scan.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import ROOT\n",
-    "# from T2KStyle import T2KStyle"
+    "from T2KStyle import T2KStyle"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
